@@ -19,7 +19,7 @@ depth: 1
 
 ### Bug fixes
 
- * ...
+ * Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
 
 ### Documentation
 
@@ -32,6 +32,7 @@ depth: 1
  * Add npm scripts for TypeScript checks and formatting SCSS files (LB (Ben) Johnston)
  * Run tests in parallel in some of the CI setup (Sage Abdullah)
  * Remove unused WorkflowStatus view, urlpattern, and workflow-status.js (Storm Heg)
+ * Add support for options/attrs in Telepath widgets so that attrs render on the created DOM (Storm Heg)
 
 
 ## Upgrade considerations - changes affecting all projects
